--- a/content/5f97c5714c.md
+++ b/content/5f97c5714c.md
@@ -13,7 +13,7 @@ In der Dämmerung des **30. September 1965** begann eines der dunkelsten Kapitel
 ### Die Wurzeln der Gewalt
 ---
 
-Die Ursprünge der Massaker liegen in der komplexen politischen Landschaft des postkolonialen Indonesiens. Unter der Führung von Präsident **Sukarno** hatte sich das Land zu einem Staat entwickelt, in dem die *Kommunistische Partei Indonesiens* (*PKI*) — damals die **drittgrößte kommunistische Partei** weltweit — erheblichen Einfluss gewann. Diese Entwicklung beobachteten sowohl die indonesische Armee als auch westliche Mächte, insbesondere die *Vereinigten Staaten*, mit wachsender Besorgung.
+Die Ursprünge der Massaker liegen in der komplexen politischen Landschaft des postkolonialen *Indonesiens*. Unter der Führung von Präsident **Sukarno** hatte sich das Land zu einem Staat entwickelt, in dem die *Kommunistische Partei Indonesiens* (*PKI*) — damals die **drittgrößte kommunistische Partei** weltweit — erheblichen Einfluss gewann. Diese Entwicklung beobachteten sowohl die indonesische Armee als auch westliche Mächte, insbesondere die *Vereinigten Staaten*, mit wachsender Besorgung.
 
 Die gesellschaftliche Spannung erreichte ihren Höhepunkt, als am **30. September 1965** eine Gruppe von Offizieren **sechs Generäle** entführte und ermordete. Dieser als »*Bewegung 30. September*« bekannt gewordene Vorfall wurde vom späteren Machthaber **General Suharto** geschickt instrumentalisiert, um eine beispiellose Säuberungsaktion gegen tatsächliche und vermeintliche Kommunisten zu legitimieren.
 
